# GFTS4

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: spline.h  task.h  testSpline.h
src/: spline.cpp  task.cpp  testSpline.cpp
ui/: customview.cpp  customview.h  functions.cpp  functions.h  mainpart.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oscillpart.cpp  taskui.cpp  taskui.h  taskui.ui  testpart.cpp  ui.pro
